<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
    
  <groupId>org.praxislive.ide</groupId>
  <artifactId>praxislive-parent</artifactId>
  <version>6.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>
    
  <name>PraxisLIVE-PARENT</name>
  <description>Live IDE for PraxisCORE</description>
  <url>https://www.praxislive.org</url>
  
  <licenses>
    <license>
      <name>GPL-3.0-only</name>
      <url>http://www.gnu.org/licenses/gpl.html</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
    
  <developers>
    <developer>
      <name>Neil C Smith</name>
      <roles>
        <role>Lead developer</role>
      </roles>
      <email>neil@codelerity.com</email>
    </developer>
  </developers>  
    
  <modules>
    <module>application</module>
    <module>branding</module>
    <module>modules/praxiscore.embedder</module>
    <module>modules/praxislive.audio</module>
    <module>modules/praxislive.components</module>
    <module>modules/praxislive.code</module>
    <module>modules/praxislive.core</module>
    <module>modules/praxislive.core.ui</module>
    <module>modules/praxislive.editor</module>
    <module>modules/praxislive.editor.saveflash</module>
    <module>modules/praxislive.graph</module>
    <module>modules/praxislive.model</module>
    <module>modules/praxislive.opengl</module>
    <module>modules/praxislive.project</module>
    <module>modules/praxislive.project.templates</module>
    <module>modules/praxislive.properties</module>
    <module>modules/praxislive.pxj</module>
    <module>modules/praxislive.pxr</module>
    <module>modules/praxislive.pxr.graph</module>
    <module>modules/praxislive.pxr.gui</module>
    <module>modules/praxislive.pxs</module>
    <module>modules/praxislive.tableeditor</module>
    <module>modules/praxislive.video</module>
  </modules>
    
  <scm>
    <url>https://github.com/praxis-live/praxis-live/tree/master</url>
    <connection>scm:git:https://github.com/praxis-live/praxis-live.git</connection>
    <developerConnection>scm:git:https://github.com/praxis-live/praxis-live.git</developerConnection>
  </scm>

  <distributionManagement>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    <repository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>
  
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <brandingToken>praxislive</brandingToken>
    <netbeans.version>RELEASE210</netbeans.version>
    <praxiscore.version>${project.version}</praxiscore.version>
  </properties>
  
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.netbeans.utilities</groupId>
          <artifactId>nbm-maven-plugin</artifactId>
          <version>14.0</version>
          <extensions>true</extensions>
          <configuration>
            <brandingToken>${brandingToken}</brandingToken>
            <cluster>${brandingToken}</cluster>
          </configuration>
          <executions>
            <execution>
              <id>default-branding</id>
              <phase>none</phase>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.12.1</version>
          <configuration>
            <release>21</release>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.3.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>3.6.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.3.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-install-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.2.5</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>3.6.0</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  
  <profiles>
    <profile>
      <id>release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.3.0</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>3.1.0</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
  


</project>
